--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: chatbot-backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
+    startCommand: gunicorn -w 4 -b 0.0.0.0:10000 app:app
     envVars:
       - key: PORT
         value: 10000
